fix to show only on mobile

--- a/src/components/UI/ToggleBurgerMenu/ToggleBurgerMenu.scss
+++ b/src/components/UI/ToggleBurgerMenu/ToggleBurgerMenu.scss
@@ -6,6 +6,10 @@
     padding-bottom: 10px;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 
+    @media (min-width: 400px) {
+        display: none;
+    }
+
     &__bar {
         //Selector for the bars
         width: 40px;
